--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 #00ABB3 = tosca
 #3C4048 = abu gelap
 #B2B2B2 = abu
-#EAEAEA = abu terang */
+#EAEAEA = abu terang
+#C7CF2A = kuning
+#FFD400 = oren */
 
-/* base */
 body {
     font-family: Candara;
     margin: 0;
@@ -12,7 +13,6 @@ body {
     background-color: #3C4048;
 }
 
-/* header */
 header {
     background-color: #00ABB3;
     color: #EAEAEA;
@@ -20,46 +20,83 @@ header {
     padding: 20px;
 }
 
-/* isi, portofolio */
-.portofolio {
-    padding: 5px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.home {
-    background-color: #EAEAEA;
-    border-radius: 5px;
-    margin: 1px;
-    padding: 30px;
-    padding-top: 300px;
-    padding-bottom: 50px;
-    width: calc(33.33% - 5px);
-    text-align: center;
-}
-
-.nav {
-    color: #00ABB3;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    text-align: center;
-}
-
-.sub1 {
-    background-color: #00ABB3;
-    border-radius: 5px;
-    margin: 1px;
-    padding: 30px;
-    width: calc(33.33% - 5px);
-    text-align: center;
-}
-
-/* footer */
 footer {
     background-color: #00ABB3;
     color: #EAEAEA;
     text-align: center;
     padding: 10px;
+}
+
+.nav {
+    color: #EAEAEA;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.portofolio {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.home1 {
+    background-color: #EAEAEA;
+    border-radius: 5px;
+    margin: 5px;
+    padding: 10px;
+    padding-top: 200px;
+    padding-bottom: 20px;
+    width: calc(20% - 5px);
+    text-align: center;
+}
+
+.home2 {
+    margin: 5px;
+    padding: 10px;
+    width: calc(25% - 5px);
+}
+
+.sub1 {
+    background-color: #FFD400;
+    display: flex;
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: calc(80% - 5px);
+}
+
+.sub2 {
+    background-color: #FFD400;
+    display: flex;
+    border-radius: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: calc(60% - 5px);
+    flex-direction: row-reverse;
+}
+
+.sub3 {
+    background-color: #FFD400;
+    display: flex;
+    border-radius: 50%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    width: calc(10% - 5px);
+    flex-direction: row-reverse;
+}
+
+.sub4 {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+}
+
+.sub5 {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
