Update StartPage & Home

--- a/Coba/color.css
+++ b/Coba/color.css
@@ -29,4 +29,9 @@ Tema4 {
     --primary: #674188;
     --secondary: #c3acd0;
     --accent: #e87045;
+
+    /* --photo https://i.postimg.cc/43d6tXGn/asset3.png
+    --web https://i.postimg.cc/FKBjVwFp/asset1.png
+    --sosmed https://i.postimg.cc/XYxKppTT/asset2.png
+    --kzh https://i.postimg.cc/8zTBphnR/asset4.png */
 }
