Update Post Project & finishing

--- a/Coba/color.css
+++ b/Coba/color.css
@@ -33,5 +33,6 @@ Tema4 {
     /* --photo https://i.postimg.cc/43d6tXGn/asset3.png
     --web https://i.postimg.cc/FKBjVwFp/asset1.png
     --sosmed https://i.postimg.cc/XYxKppTT/asset2.png
-    --kzh https://i.postimg.cc/8zTBphnR/asset4.png */
+    --kzh https://i.postimg.cc/8zTBphnR/asset4.png 
+    https://i.postimg.cc/CLbrgv04/ref2.png*/
 }
