--- a/Main/style.css
+++ b/Main/style.css
@@ -23,9 +23,26 @@ body {
     background-image: url(https://i.postimg.cc/zXDZzrz3/BG.png);
 }
 
+.laman1 {
+    max-width: 100%;
+    margin: auto;
+    height: 100vh;
+}
+
+.button {
+    background-color: #e87045;
+    color: #1d1922;
+    padding: 5px;
+    border-radius: 50px;
+    width: 150px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+}
+
 .wadah {
     .laman {
-        color: #f7efe5;
+        color: #c3acd0;
         max-width: 100%;
         margin: auto;
         height: 100vh;
@@ -94,4 +111,23 @@ body {
     text-align: left;
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.autumn {
+    color: #e87045;
+}
+
+.ungugelap {
+    color: #1d1922;
+}
+
+.terang {
+    color: #f7efe5;
+}
+
+footer {
+    background-color: #674188;
+    color: #f7efe5;
+    text-align: center;
+    padding: 10px;
 }
